# Random-poetry

./: .dockerignore  .gitignore  About.html  Cargo.toml  Dockerfile  }
src/: authors.rs  main.rs  poem.rs
templates/: about.html  authors.html  index.html  nav.html  randomPoem.html
