[package]
name = "random_poetry"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
hyper = "1.4.1"
reqwest = { version =  "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tera = "1.20.0"
tokio = "1.39.2"
lazy_static = "1.5.0"
